# SolarAxionFlux

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  examples.ipynb  pytest.ini  references.bib
cmake/: thisSolarAxionFluxLib.cmake
data/: generate_OPdata.py  mix_models.py  model_Javi.txt
data/opacity_tables/: arXiv_1601_01930v2_fig10_opacity.txt
data/opacity_tables/ATOMIC/: T1.250Rho143.111.txt  T1.250Rho150.500.txt  T1.375Rho124.995.txt  T1.375Rho143.111.txt  T1.375Rho150.500.txt
data/opacity_tables/OPAS/: index.txt
include/: constants.hpp  experimental_flux.hpp  python_wrapper.hpp  spectral_flux.hpp  utils.hpp
include/solaxflux/: constants.hpp  experimental_flux.hpp  python_wrapper.hpp  solar_model.hpp  spectral_flux.hpp  tests.hpp  utils.hpp
python/: constants.py  fit_helioscope_data.py  physics.py
python/grid_integrator/: flux_grid_integrator.py  grid_integrator.py
python/tests/: test_fitting.py  test_matrix_routines.py
python/tomography/: fitting.py  tomography.py
results/: plot.py  plot_results.py
src/: CMakeLists.txt  Makefile  MyLibraryConfig.cmake  cmake_install.cmake  compute_all_spectra.cpp  experimental_flux.cpp  main.cpp  python_wrapper.cpp  solar_model.cpp  spectral_flux.cpp  tests.cpp  utils.cpp
