cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
project(SolarAxionFlux VERSION 0.1 DESCRIPTION "Calculate the solar axion flux" LANGUAGES CXX)
if (CMAKE_VERSION VERSION_LESS "3.1")
   if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
   endif ()
else ()
   set (CMAKE_CXX_STANDARD 11)
endif ()


# Must use GNUInstallDirs to install libraries into correct locations on all platforms.
include(GNUInstallDirs)

# Check for GNU Scientific Library (GSL) and add it
include(cmake/FindGSL.cmake)
if(GSL_FOUND)
   if (NOT GSL_INCLUDE_DIRS STREQUAL "")
      include_directories("${GSL_INCLUDE_DIRS}")
   endif()
else()
   message(FATAL_ERROR "GSL libraries not found! The Solar Axion Flux library requires GSL.")
endif()
set(LIBRARIES ${LIBRARIES} ${GSL_LIBRARIES})

# Check for Python 3 and PYBIND11
set(INTERNAL_PYBIND11_DIR "${PROJECT_SOURCE_DIR}/include/pybind11")
find_package(PythonInterp 3 QUIET)
if(PYTHONINTERP_FOUND)
  if(EXISTS ${INTERNAL_PYBIND11_DIR})
    message("Python 3 and PYBIND11 found!")
    set(PYBIND11_INSTALLED 1)
    add_subdirectory(${INTERNAL_PYBIND11_DIR})
  else()
    message("Python 3 found! Will now download PYBIND11 header files...")
    execute_process(RESULT_VARIABLE res COMMAND git clone https://github.com/pybind/pybind11.git ${PROJECT_SOURCE_DIR}/include/pybind11)
      if(${res} STREQUAL "0")
        execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_SOURCE_DIR}/include/pybind11 git checkout -q v2.4.3)
        set(PYBIND11_INSTALLED 1)
        add_subdirectory(${INTERNAL_PYBIND11_DIR})
      else()
        message("Failed to download and install PYBIND11. Skipping PYBIND11 integration...")
      endif()
  endif()
else()
  message("Optional program Python 3 not found. Skipping PYBIND11 integration...")
endif()

add_subdirectory(src)
